--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^0.11.2",
     "grunt-browserify": "^3.0.1",
     "browserify": "^6.0.3",
-    "grunt-contrib-jasmine": "^0.8.0"
+    "grunt-contrib-jasmine": "^0.8.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-clean": "^0.6.0"
   }
 }
