--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "browserify": "^6.0.3",
     "grunt-contrib-jasmine": "^0.8.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-clean": "^0.6.0"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jsxhint": "^0.3.0",
+    "react-tools": "^0.11.2"
   }
 }
