--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fluxury",
+  "name": "adnflux",
   "version": "0.0.1",
   "description": "A React - Flux starter kit with Grunt and Backbone.",
   "main": "lib/app.jsx",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jim-y/fluxury.git"
+    "url": "https://github.com/jim-y/adnflux.git"
   },
   "keywords": [
     "javascript",
@@ -22,9 +22,9 @@
   "author": "Attila Kling <attila.kling@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jim-y/fluxury/issues"
+    "url": "https://github.com/jim-y/adnflux/issues"
   },
-  "homepage": "https://github.com/jim-y/fluxury",
+  "homepage": "https://github.com/jim-y/adnflux",
   "devDependencies": {
     "grunt": "^0.4.5",
     "react": "^0.11.2",
@@ -38,6 +38,8 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-contrib-jshint": "^0.10.0",
+    "restify": "^2.8.3",
+    "mongoose": "^3.8.17"
   }
 }
